--- a/operations/pyroscope/helm/pyroscope/templates/serviceaccount.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/serviceaccount.yaml
@@ -1,11 +1,11 @@
-{{- if .Values.phlare.serviceAccount.create -}}
+{{- if .Values.pyroscope.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "phlare.serviceAccountName" . }}
+  name: {{ include "pyroscope.serviceAccountName" . }}
   labels:
-    {{- include "phlare.labels" . | nindent 4 }}
-  {{- with .Values.phlare.serviceAccount.annotations }}
+    {{- include "pyroscope.labels" . | nindent 4 }}
+  {{- with .Values.pyroscope.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
