--- a/operations/pyroscope/helm/pyroscope/templates/clusterrolebinding.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/clusterrolebinding.yaml
@@ -2,14 +2,14 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Namespace }}-{{ include "phlare.fullname" . }}
+  name: {{ .Release.Namespace }}-{{ include "pyroscope.fullname" . }}
   labels:
-    {{- include "phlare.labels" . | nindent 4 }}
+    {{- include "pyroscope.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Release.Namespace }}-{{ include "phlare.fullname" . }}
+  name: {{ .Release.Namespace }}-{{ include "pyroscope.fullname" . }}
 subjects:
 - kind: ServiceAccount
-  name: {{ include "phlare.serviceAccountName" . }}
+  name: {{ include "pyroscope.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
