--- a/operations/pyroscope/helm/pyroscope/templates/configmap-overrides.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/configmap-overrides.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "phlare.fullname" . }}-overrides-config
+  name: {{ include "pyroscope.fullname" . }}-overrides-config
   labels:
-    {{- include "phlare.labels" . | nindent 4 }}
+    {{- include "pyroscope.labels" . | nindent 4 }}
 data:
   overrides.yaml: |
     overrides:
-      {{- toYaml .Values.phlare.tenantOverrides | nindent 6 }}
+      {{- toYaml .Values.pyroscope.tenantOverrides | nindent 6 }}
