--- a/operations/pyroscope/helm/pyroscope/templates/configmap.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "phlare.fullname" . }}-config
+  name: {{ include "pyroscope.fullname" . }}-config
   labels:
-    {{- include "phlare.labels" . | nindent 4 }}
+    {{- include "pyroscope.labels" . | nindent 4 }}
 data:
   config.yaml: |
-    {{- tpl (mergeOverwrite (tpl .Values.phlare.config . | fromYaml) .Values.phlare.structuredConfig | toYaml) . | nindent 4 }}
+    {{- tpl (mergeOverwrite (tpl .Values.pyroscope.config . | fromYaml) .Values.pyroscope.structuredConfig | toYaml) . | nindent 4 }}
