--- a/operations/pyroscope/helm/pyroscope/templates/memberlist-service.yaml
+++ b/operations/pyroscope/helm/pyroscope/templates/memberlist-service.yaml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "phlare.fullname" . }}-memberlist
+  name: {{ template "pyroscope.fullname" . }}-memberlist
   labels:
-    {{- include "phlare.labels" . | nindent 4 }}
+    {{- include "pyroscope.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   clusterIP: None
   ports:
-    - name: {{ .Values.phlare.memberlist.port_name }}
-      port: {{ .Values.phlare.memberlist.port }}
+    - name: {{ .Values.pyroscope.memberlist.port_name }}
+      port: {{ .Values.pyroscope.memberlist.port }}
       protocol: TCP
-      targetPort: {{ .Values.phlare.memberlist.port }}
+      targetPort: {{ .Values.pyroscope.memberlist.port }}
   publishNotReadyAddresses: true
   selector:
-    {{- include "phlare.selectorLabels" . | nindent 4 }}
+    {{- include "pyroscope.selectorLabels" . | nindent 4 }}
     # TODO: Ensure only services that offer memberlist register
-    # phlare.grafana.com/memberlist: "true"
+    # pyroscope.grafana.com/memberlist: "true"
