--- a/.golangci.yml
+++ b/.golangci.yml
@@ -53,10 +53,11 @@ linters-settings:
     local-prefixes: github.com/grafana/pyroscope/pkg,github.com/grafana/pyroscope/api,github.com/grafana/pyroscope/tools
 
   depguard:
-    list-type: blacklist
-    include-go-root: true
-    packages-with-error-message:
-      - github.com/go-kit/kit/log: "Use github.com/go-kit/log instead of github.com/go-kit/kit/log"
+    rules:
+      main:
+        deny:
+          - pkg: "github.com/go-kit/kit/log"
+            desc: "Use github.com/go-kit/log instead of github.com/go-kit/kit/log"
 
   revive:
     rules:
