--- a/operations/pyroscope/helm/pyroscope/ci/micro-services-values.yaml
+++ b/operations/pyroscope/helm/pyroscope/ci/micro-services-values.yaml
@@ -3,6 +3,12 @@
 # Declare variables to be passed into your templates.
 
 pyroscope:
+  # these port overrides are temporary
+  service:
+    port: 4040
+  structuredConfig:
+    server:
+      http_listen_port: 4040
   components:
     querier:
       kind: Deployment
