chore: renames phlaredb to pyroscopedb

--- a/operations/pyroscope/helm/pyroscope/values.yaml
+++ b/operations/pyroscope/helm/pyroscope/values.yaml
@@ -79,11 +79,11 @@ pyroscope:
     # lines, adjust them as necessary, and remove the curly braces after 'resources'.
     #
     # Note that if memory consumption is higher than you would like, you can decrease the interval
-    # that profiles are written into blocks by setting `phlaredb.max-block-duration` in the `extraArgs`
+    # that profiles are written into blocks by setting `pyroscopedb.max-block-duration` in the `extraArgs`
     # stanza. By default, it is set to 3h - override it, for example, as below:
     # ```
     # extraArgs:
-    #   phlaredb.max-block-duration: 30m
+    #   pyroscopedb.max-block-duration: 30m
     # ```
     #
     # limits:
