--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grafana-pyroscope",
-  "version": "0.0.1",
+  "version": "2.0.0",
   "repository": "git@github.com:grafana/pyroscope.git",
   "author": "Grafana Labs",
   "license": "AGPL-3.0-only",
@@ -127,6 +127,8 @@
     "@mui/base": "5.0.0-alpha.98",
     "@mui/material": "5.10.11",
     "@mui/types": "7.2.0",
+    "@pyroscope/flamegraph": "^0.35.6",
+    "@pyroscope/models": "^0.4.7",
     "@react-hook/resize-observer": "^1.2.6",
     "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^1.6.2",
