--- a/package.json
+++ b/package.json
@@ -70,8 +70,6 @@
     "copy-webpack-plugin": "^11.0.0",
     "cypress": "^12.11.0",
     "cypress-image-snapshot": "^4.0.1",
-    "d3-scale": "^4.0.2",
-    "d3-scale-chromatic": "^3.0.0",
     "esbuild-loader": "^3.0.1",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "18.2.1",
@@ -135,6 +133,11 @@
     "color": "^3.1.3",
     "compression-streams-polyfill": "^0.1.4",
     "css-loader": "^4.0.0",
+    "d3": "^7.3.0",
+    "d3-array": "^3.1.1",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
+    "d3-time": "^3.0.0",
     "file-saver": "^2.0.5",
     "graphviz-react": "^1.2.5",
     "jquery": "^3.6.4",
@@ -173,5 +176,8 @@
   },
   "optionalDependencies": {
     "@pyroscope/nodejs": "^0.2.5"
+  },
+  "resolutions": {
+      "d3-graphviz": "^5.1.0"
   }
 }
