fix: unify jquery version, ensure all d files are included

--- a/package.json
+++ b/package.json
@@ -178,6 +178,8 @@
     "@pyroscope/nodejs": "^0.2.5"
   },
   "resolutions": {
-      "d3-graphviz": "^5.1.0"
+      "d3-graphviz": "^5.1.0",
+      "jquery": "^3.6.4"
+
   }
 }
