--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
+    "canvas": "^2.8.0",
+    "canvas-to-buffer": "^1.1.1",
     "clean-webpack-plugin": "^3.0.0",
     "contributor-faces": "^1.1.0",
     "conventional-changelog-cli": "^2.1.1",
