--- a/operations/pyroscope/helm/pyroscope/Chart.yaml
+++ b/operations/pyroscope/helm/pyroscope/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: pyroscope
 description: 🔥 horizontally-scalable, highly-available, multi-tenant continuous profiling aggregation system
 type: application
-version: 0.5.4
-appVersion: 0.5.1
+version: 1.0.0-rc.0
+appVersion: 1.0.0-rc.0
 dependencies:
   - name: minio
     alias: minio
