--- a/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
+++ b/operations/pyroscope/helm/pyroscope/rendered/micro-services.yaml
@@ -12,10 +12,10 @@ kind: ServiceAccount
 metadata:
   name: pyroscope-dev
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
 ---
 # Source: pyroscope/charts/minio/templates/secrets.yaml
@@ -358,10 +358,10 @@ kind: ConfigMap
 metadata:
   name: pyroscope-dev-overrides-config
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
 data:
   overrides.yaml: |
@@ -374,10 +374,10 @@ kind: ConfigMap
 metadata:
   name: pyroscope-dev-config
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
 data:
   config.yaml: |
@@ -1039,10 +1039,10 @@ kind: ClusterRole
 metadata:
   name: default-pyroscope-dev
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
 rules:
 - apiGroups:
@@ -1065,10 +1065,10 @@ kind: ClusterRoleBinding
 metadata:
   name: default-pyroscope-dev
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -1153,10 +1153,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-memberlist
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
 spec:
   type: ClusterIP
@@ -1179,10 +1179,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-agent
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "agent"
 spec:
@@ -1203,10 +1203,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-agent-headless
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "agent"
 spec:
@@ -1228,10 +1228,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-distributor
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "distributor"
 spec:
@@ -1252,10 +1252,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-distributor-headless
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "distributor"
 spec:
@@ -1277,10 +1277,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-ingester
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "ingester"
 spec:
@@ -1301,10 +1301,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-ingester-headless
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "ingester"
 spec:
@@ -1326,10 +1326,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-querier
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "querier"
 spec:
@@ -1350,10 +1350,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-querier-headless
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "querier"
 spec:
@@ -1375,10 +1375,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-query-frontend
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "query-frontend"
 spec:
@@ -1399,10 +1399,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-query-frontend-headless
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "query-frontend"
 spec:
@@ -1424,10 +1424,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-query-scheduler
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "query-scheduler"
 spec:
@@ -1448,10 +1448,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-query-scheduler-headless
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "query-scheduler"
 spec:
@@ -1473,10 +1473,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-store-gateway
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "store-gateway"
 spec:
@@ -1497,10 +1497,10 @@ kind: Service
 metadata:
   name: pyroscope-dev-store-gateway-headless
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "store-gateway"
 spec:
@@ -1522,10 +1522,10 @@ kind: Deployment
 metadata:
   name: pyroscope-dev-agent
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "agent"
 spec:
@@ -1538,7 +1538,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: cffd421d0668079465ecad41f015d18b5470b1e7be0a22ff51f4d875e4ad3831
+        checksum/config: 6fe16ba2b1a5722aa6bd635556589287c1da29fd7886feffd5435076b71dfe9a
         profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.port_name: http2
@@ -1560,7 +1560,7 @@ spec:
         - name: "agent"
           securityContext:
             {}
-          image: "grafana/phlare:0.5.1"
+          image: "grafana/pyroscope:1.0.0-rc.0"
           imagePullPolicy: IfNotPresent
           args:
             - "-target=agent"
@@ -1611,10 +1611,10 @@ kind: Deployment
 metadata:
   name: pyroscope-dev-distributor
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "distributor"
 spec:
@@ -1627,7 +1627,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: cffd421d0668079465ecad41f015d18b5470b1e7be0a22ff51f4d875e4ad3831
+        checksum/config: 6fe16ba2b1a5722aa6bd635556589287c1da29fd7886feffd5435076b71dfe9a
         profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.port_name: http2
@@ -1649,7 +1649,7 @@ spec:
         - name: "distributor"
           securityContext:
             {}
-          image: "grafana/phlare:0.5.1"
+          image: "grafana/pyroscope:1.0.0-rc.0"
           imagePullPolicy: IfNotPresent
           args:
             - "-target=distributor"
@@ -1699,10 +1699,10 @@ kind: Deployment
 metadata:
   name: pyroscope-dev-querier
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "querier"
 spec:
@@ -1715,7 +1715,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: cffd421d0668079465ecad41f015d18b5470b1e7be0a22ff51f4d875e4ad3831
+        checksum/config: 6fe16ba2b1a5722aa6bd635556589287c1da29fd7886feffd5435076b71dfe9a
         profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.port_name: http2
@@ -1737,7 +1737,7 @@ spec:
         - name: "querier"
           securityContext:
             {}
-          image: "grafana/phlare:0.5.1"
+          image: "grafana/pyroscope:1.0.0-rc.0"
           imagePullPolicy: IfNotPresent
           args:
             - "-target=querier"
@@ -1787,10 +1787,10 @@ kind: Deployment
 metadata:
   name: pyroscope-dev-query-frontend
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "query-frontend"
 spec:
@@ -1803,7 +1803,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: cffd421d0668079465ecad41f015d18b5470b1e7be0a22ff51f4d875e4ad3831
+        checksum/config: 6fe16ba2b1a5722aa6bd635556589287c1da29fd7886feffd5435076b71dfe9a
         profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.port_name: http2
@@ -1825,7 +1825,7 @@ spec:
         - name: "query-frontend"
           securityContext:
             {}
-          image: "grafana/phlare:0.5.1"
+          image: "grafana/pyroscope:1.0.0-rc.0"
           imagePullPolicy: IfNotPresent
           args:
             - "-target=query-frontend"
@@ -1875,10 +1875,10 @@ kind: Deployment
 metadata:
   name: pyroscope-dev-query-scheduler
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "query-scheduler"
 spec:
@@ -1891,7 +1891,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: cffd421d0668079465ecad41f015d18b5470b1e7be0a22ff51f4d875e4ad3831
+        checksum/config: 6fe16ba2b1a5722aa6bd635556589287c1da29fd7886feffd5435076b71dfe9a
         profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.port_name: http2
@@ -1913,7 +1913,7 @@ spec:
         - name: "query-scheduler"
           securityContext:
             {}
-          image: "grafana/phlare:0.5.1"
+          image: "grafana/pyroscope:1.0.0-rc.0"
           imagePullPolicy: IfNotPresent
           args:
             - "-target=query-scheduler"
@@ -2058,10 +2058,10 @@ kind: StatefulSet
 metadata:
   name: pyroscope-dev-ingester
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "ingester"
 spec:
@@ -2076,7 +2076,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: cffd421d0668079465ecad41f015d18b5470b1e7be0a22ff51f4d875e4ad3831
+        checksum/config: 6fe16ba2b1a5722aa6bd635556589287c1da29fd7886feffd5435076b71dfe9a
         profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.port_name: http2
@@ -2098,7 +2098,7 @@ spec:
         - name: "ingester"
           securityContext:
             {}
-          image: "grafana/phlare:0.5.1"
+          image: "grafana/pyroscope:1.0.0-rc.0"
           imagePullPolicy: IfNotPresent
           args:
             - "-target=ingester"
@@ -2149,10 +2149,10 @@ kind: StatefulSet
 metadata:
   name: pyroscope-dev-store-gateway
   labels:
-    helm.sh/chart: pyroscope-0.5.4
+    helm.sh/chart: pyroscope-1.0.0-rc.0
     app.kubernetes.io/name: pyroscope
     app.kubernetes.io/instance: pyroscope-dev
-    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/version: "1.0.0-rc.0"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: "store-gateway"
 spec:
@@ -2167,7 +2167,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: cffd421d0668079465ecad41f015d18b5470b1e7be0a22ff51f4d875e4ad3831
+        checksum/config: 6fe16ba2b1a5722aa6bd635556589287c1da29fd7886feffd5435076b71dfe9a
         profiles.grafana.com/cpu.port_name: http2
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.port_name: http2
@@ -2189,7 +2189,7 @@ spec:
         - name: "store-gateway"
           securityContext:
             {}
-          image: "grafana/phlare:0.5.1"
+          image: "grafana/pyroscope:1.0.0-rc.0"
           imagePullPolicy: IfNotPresent
           args:
             - "-target=store-gateway"
